--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                         <input type="hidden" name="_subject" value="New Inquiry from Vedantic Systems Website">
                         <input type="hidden" name="_captcha" value="false">
                         <input type="hidden" name="_template" value="table">
-                        <input type="hidden" name="_next" value="thank-you.html">
+                        <input type="hidden" name="_next" value="https://priyankapriya5729-eng.github.io/vedantic-systems-llp/thank-you.html">
                         
                         <div class="form-group">
                             <label for="name">Full Name *</label>
